force-app/main/default/objects/Account/fields/Acquisition_Date__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Date__c</fullName>
    <label>Acquisition Date</label>
    <type>Date</type>
</CustomField>