force-app/main/default/objects/Account/fields/Birthcity__c.field-meta.xml
<CustomField>
    <fullName>Birthcity__c</fullName>
    <label>Birthcity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>