force-app/main/default/objects/Account/fields/Birthstate__c.field-meta.xml
<CustomField>
    <fullName>Birthstate__c</fullName>
    <description>Stato di nascita</description>
    <inlineHelpText>Stato di nascita</inlineHelpText>
    <label>Birthstate</label>
    <length>30</length>
    <type>Text</type>
</CustomField>