force-app/main/default/objects/Account/fields/Broker_Type__c.field-meta.xml
<CustomField>
    <fullName>Broker_Type__c</fullName>
    <label>Broker Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AG</fullName>
                <label>Agent</label>
            </value>
            <value>
                <fullName>SA</fullName>
                <label>Sub Agent</label>
            </value>
            <value>
                <fullName>CV</fullName>
                <label>Convenzionato</label>
            </value>
            <value>
                <fullName>PV</fullName>
                <label>Punto Vendita</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>