force-app/main/default/objects/Account/fields/Call_Center_Segnalatore__c.field-meta.xml
<CustomField>
    <fullName>Call_Center_Segnalatore__c</fullName>
    <label>Call Center Segnalatore</label>
    <length>60</length>
    <type>Text</type>
</CustomField>