force-app/main/default/objects/Account/fields/Canweb__c.field-meta.xml
<CustomField>
    <fullName>Canweb__c</fullName>
    <description>Indica il canale web di acquisizione del dealer, è un dato che arriva da OCS e che ci salviamo. Non è utilizzato nel processo di convenzionamento ma ad esempio nelle liste è un dato che può essere fornito</description>
    <inlineHelpText>Indica il canale web di acquisizione del dealer, è un dato che arriva da OCS e che ci salviamo. Non è utilizzato nel processo di convenzionamento ma ad esempio nelle liste è un dato che può essere fornito</inlineHelpText>
    <label>Canweb</label>
    <length>255</length>
    <type>Text</type>
</CustomField>