force-app/main/default/objects/Account/fields/Cluster_Act__c.field-meta.xml
<CustomField>
    <fullName>Cluster_Act__c</fullName>
    <label>Cluster Act</label>
    <length>10</length>
    <type>Text</type>
</CustomField>