force-app/main/default/objects/Account/fields/Codice_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Codice_Cliente__c</fullName>
    <label>Codice Cliente NON USARE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>