force-app/main/default/objects/Account/fields/CodiceAgente__c.field-meta.xml
<CustomField>
    <fullName>CodiceAgente__c</fullName>
    <label>Codice Agente</label>
    <length>20</length>
    <type>Text</type>
</CustomField>