force-app/main/default/objects/Account/fields/CodiceClienteFilled__c.field-meta.xml
<CustomField>
    <fullName>CodiceClienteFilled__c</fullName>
    <formula>IF (RecordType.Name == &#39;Branch&#39;,LPAD( getCodice_Cliente__c , 3, &#39;0&#39;),getCodice_Cliente__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Codice Cliente Filled</label>
    <type>Text</type>
</CustomField>