force-app/main/default/objects/Account/fields/CodiceSubAgente__c.field-meta.xml
<CustomField>
    <fullName>CodiceSubAgente__c</fullName>
    <description>Codice Sub Agente OCS da Orgs</description>
    <inlineHelpText>Codice Sub Agente OCS</inlineHelpText>
    <label>Codice Sub Agente</label>
    <length>20</length>
    <type>Text</type>
</CustomField>