force-app/main/default/objects/Account/fields/COM_Numero_Pratiche_Filiale__c.field-meta.xml
<CustomField>
    <fullName>COM_Numero_Pratiche_Filiale__c</fullName>
    <label>Numero Pratiche</label>
    <summarizedField>COM_Intervista__c.Com_Intervista_Number__c</summarizedField>
    <summaryFilterItems>
        <field>COM_Intervista__c.COM_Current_Period_Filiale__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>COM_Intervista__c.COM_MD_Filiale__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>