force-app/main/default/objects/Account/fields/COM_PraticheChiuse_Conforme__c.field-meta.xml
<CustomField>
    <fullName>COM_PraticheChiuse_Conforme__c</fullName>
    <label>Chiuse Conforme</label>
    <length>50</length>
    <type>Text</type>
</CustomField>