force-app/main/default/objects/Account/fields/Data_Nascita__c.field-meta.xml
<CustomField>
    <fullName>Data_Nascita__c</fullName>
    <label>Data Nascita</label>
    <type>Date</type>
</CustomField>