force-app/main/default/objects/Account/fields/DealerPersonaRiferimento__c.field-meta.xml
<CustomField>
    <fullName>DealerPersonaRiferimento__c</fullName>
    <description>Persona di riferimento che ha segnalato il dealer per il processo di convenzionamento.</description>
    <label>Dealer Persona Riferimento</label>
    <length>30</length>
    <type>Text</type>
</CustomField>