force-app/main/default/objects/Account/fields/Dealership_Code__c.field-meta.xml
<CustomField>
    <fullName>Dealership_Code__c</fullName>
    <label>Dealership Code</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>