force-app/main/default/objects/Account/fields/DEM_Da_Inviare__c.field-meta.xml
<CustomField>
    <fullName>DEM_Da_Inviare__c</fullName>
    <defaultValue>false</defaultValue>
    <description>flag utilizzato quando si vuole inviare un’email tramite Pardot</description>
    <label>DEM Da Inviare Eliminare</label>
    <type>Checkbox</type>
</CustomField>