force-app/main/default/objects/Account/fields/Desc_Ateco__c.field-meta.xml
<CustomField>
    <fullName>Desc_Ateco__c</fullName>
    <label>Desc Ateco</label>
    <length>255</length>
    <type>Text</type>
</CustomField>