force-app/main/default/objects/Account/fields/DescriptionOfBusinessStatus__c.field-meta.xml
<CustomField>
    <fullName>DescriptionOfBusinessStatus__c</fullName>
    <label>DescriptionOfBusinessStatus</label>
    <length>50</length>
    <type>Text</type>
</CustomField>