force-app/main/default/objects/Account/fields/DocumentiObbligatori__c.field-meta.xml
<CustomField>
    <fullName>DocumentiObbligatori__c</fullName>
    <label>Documenti obbligatori</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>N</label>
            </value>
            <value>
                <fullName>S</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>