force-app/main/default/objects/Account/fields/EmailNonConforme__c.field-meta.xml
<CustomField>
    <fullName>EmailNonConforme__c</fullName>
    <description>Ultimo indirizzo email ricevuto con formato non valido</description>
    <inlineHelpText>Ultimo indirizzo email ricevuto con formato non valido</inlineHelpText>
    <label>EmailNonConforme</label>
    <length>80</length>
    <type>Text</type>
</CustomField>