force-app/main/default/objects/Account/fields/ErogatoMese__c.field-meta.xml
<CustomField>
    <fullName>ErogatoMese__c</fullName>
    <label>Erogato mese</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>