force-app/main/default/objects/Account/fields/FlagProforma__c.field-meta.xml
<CustomField>
    <fullName>FlagProforma__c</fullName>
    <label>Proforma</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>S</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>