force-app/main/default/objects/Account/fields/FlagProfRist__c.field-meta.xml
<CustomField>
    <fullName>FlagProfRist__c</fullName>
    <label>Prof Rist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>S</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>