force-app/main/default/objects/Account/fields/Forma_Giuridica__c.field-meta.xml
<CustomField>
    <fullName>Forma_Giuridica__c</fullName>
    <label>Forma Giuridica</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AF</fullName>
                <label>Altre forme</label>
            </value>
            <value>
                <fullName>APR</fullName>
                <label>Associazione professionisti</label>
            </value>
            <value>
                <fullName>ASP</fullName>
                <label>Associazione sportiva</label>
            </value>
            <value>
                <fullName>CE</fullName>
                <label>Comunione ereditaria</label>
            </value>
            <value>
                <fullName>COO</fullName>
                <label>Societa&#39; cooperativa</label>
            </value>
            <value>
                <fullName>EMP</fullName>
                <label>Ente morale pubblico</label>
            </value>
            <value>
                <fullName>EST</fullName>
                <label>Societa&#39; estera</label>
            </value>
            <value>
                <fullName>FI</fullName>
                <label>Fondazione impresa</label>
            </value>
            <value>
                <fullName>FO</fullName>
                <label>Fondazione</label>
            </value>
            <value>
                <fullName>GE</fullName>
                <label>Gruppo europeo di interesse economico</label>
            </value>
            <value>
                <fullName>INC</fullName>
                <label>Incorporated</label>
            </value>
            <value>
                <fullName>LDT</fullName>
                <label>Limited</label>
            </value>
            <value>
                <fullName>PA</fullName>
                <label>Associazione in partecipazione</label>
            </value>
            <value>
                <fullName>PUB</fullName>
                <label>Enti pubblici</label>
            </value>
            <value>
                <fullName>RC</fullName>
                <label>Contratti di rete con soggettivita’ giuridica</label>
            </value>
            <value>
                <fullName>SA</fullName>
                <label>Societa&#39; anonima</label>
            </value>
            <value>
                <fullName>SAA</fullName>
                <label>Societa&#39; in accomandita per azioni</label>
            </value>
            <value>
                <fullName>SAS</fullName>
                <label>Soc. in accomandita semplice</label>
            </value>
            <value>
                <fullName>SCI</fullName>
                <label>Societa&#39; cooperativa a responsabilita illimitata</label>
            </value>
            <value>
                <fullName>SDF</fullName>
                <label>Societa&#39; di fatto</label>
            </value>
            <value>
                <fullName>SM</fullName>
                <label>Societa&#39; di mutuo soccorso</label>
            </value>
            <value>
                <fullName>SNC</fullName>
                <label>Societa&#39; in nome collettivo</label>
            </value>
            <value>
                <fullName>SPA</fullName>
                <label>Societa&#39; per azioni</label>
            </value>
            <value>
                <fullName>SRL</fullName>
                <label>Soc. responsabilita&#39; limitata</label>
            </value>
            <value>
                <fullName>SSE</fullName>
                <label>Societa&#39; semplice</label>
            </value>
            <value>
                <fullName>STA</fullName>
                <label>Azienda autonoma statale</label>
            </value>
            <value>
                <fullName>XX</fullName>
                <label>Non precisata</label>
            </value>
            <value>
                <fullName>DIN</fullName>
                <label>Ditta individuale</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>