force-app/main/default/objects/Account/fields/getCodice_Cliente__c.field-meta.xml
<CustomField>
    <fullName>getCodice_Cliente__c</fullName>
    <description>Codice cliente senza la prima lettera identificativa</description>
    <formula>MID(OCS_External_Id__c, 2, LEN(OCS_External_Id__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Codice Cliente</label>
    <type>Text</type>
</CustomField>