force-app/main/default/objects/Account/fields/is_cv__c.field-meta.xml
<CustomField>
    <fullName>is_cv__c</fullName>
    <label>Is Cv</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>