force-app/main/default/objects/Account/fields/IsConvenzioneH3G__c.field-meta.xml
<CustomField>
    <fullName>IsConvenzioneH3G__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Convenzione H3G</label>
    <type>Checkbox</type>
</CustomField>