force-app/main/default/objects/Account/fields/IsDealerEstero__c.field-meta.xml
<CustomField>
    <fullName>IsDealerEstero__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dealer residente all&#39;estero</label>
    <type>Checkbox</type>
</CustomField>