force-app/main/default/objects/Account/fields/manualZoneAssignment__c.field-meta.xml
<CustomField>
    <fullName>manualZoneAssignment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Questa checkbox, indica su di un account di tipo dealer, se l&#39;assegnazione alla zona é stata sovrascritta manualmente.</description>
    <label>Manual zone assignment</label>
    <type>Checkbox</type>
</CustomField>