force-app/main/default/objects/Account/fields/NameParentRoleReference__c.field-meta.xml
<CustomField>
    <fullName>NameParentRoleReference__c</fullName>
    <description>campo che salva l&#39;informazione del ruolo del manager</description>
    <label>NameParentRoleReference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>