force-app/main/default/objects/Account/fields/NameRoleReference__c.field-meta.xml
<CustomField>
    <fullName>NameRoleReference__c</fullName>
    <label>NameRoleReference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>