force-app/main/default/objects/Account/fields/ndg__c.field-meta.xml
<CustomField>
    <fullName>ndg__c</fullName>
    <label>ndg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>