force-app/main/default/objects/Account/fields/Occupation_Lvl2__c.field-meta.xml
<CustomField>
    <fullName>Occupation_Lvl2__c</fullName>
    <description>Ruolo occupazione (ex livello 2)</description>
    <inlineHelpText>Ruolo occupazione (ex livello 2)</inlineHelpText>
    <label>Occupation_Lvl2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Occupation_Lvl1__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Dipendente pubblico/statale</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Dipendente SPA/SRL (con più di 15 dipendenti)</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Dipendente SPA/SRL (con meno di 15 dipendenti</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Dipendente SNC/SAS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>