force-app/main/default/objects/Account/fields/OCS_Product__c.field-meta.xml
<CustomField>
    <fullName>OCS_Product__c</fullName>
    <label>OCS Product</label>
    <length>10</length>
    <type>Text</type>
</CustomField>