force-app/main/default/objects/Account/fields/Pagamento_provvigioni__c.field-meta.xml
<CustomField>
    <fullName>Pagamento_provvigioni__c</fullName>
    <label>Pagamento provvigioni</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B</fullName>
                <default>true</default>
                <label>B</label>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>