force-app/main/default/objects/Account/fields/Partita_IVA__c.field-meta.xml
<CustomField>
    <fullName>Partita_IVA__c</fullName>
    <externalId>true</externalId>
    <label>Partita IVA</label>
    <length>16</length>
    <type>Text</type>
</CustomField>