force-app/main/default/objects/Account/fields/Plafond__c.field-meta.xml
<CustomField>
    <fullName>Plafond__c</fullName>
    <description>Plafond</description>
    <label>Plafond</label>
    <length>9</length>
    <type>Text</type>
</CustomField>