force-app/main/default/objects/Account/fields/Prodotto__c.field-meta.xml
<CustomField>
    <fullName>Prodotto__c</fullName>
    <label>Prodotto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>dealer_conv_prod</valueSetName>
    </valueSet>
</CustomField>