force-app/main/default/objects/Account/fields/Rae__c.field-meta.xml
<CustomField>
    <fullName>Rae__c</fullName>
    <label>RAE</label>
    <length>5</length>
    <type>Text</type>
</CustomField>