force-app/main/default/objects/Account/fields/ResidenceProvince__c.field-meta.xml
<CustomField>
    <fullName>ResidenceProvince__c</fullName>
    <label>Residence Province</label>
    <length>2</length>
    <type>Text</type>
</CustomField>