force-app/main/default/objects/Account/fields/Sae__c.field-meta.xml
<CustomField>
    <fullName>Sae__c</fullName>
    <label>SAE</label>
    <length>5</length>
    <type>Text</type>
</CustomField>