force-app/main/default/objects/Account/fields/Special_Product__c.field-meta.xml
<CustomField>
    <fullName>Special_Product__c</fullName>
    <label>SpecialProduct</label>
    <length>225</length>
    <type>Text</type>
</CustomField>