force-app/main/default/objects/Account/fields/Status_Attr__c.field-meta.xml
<CustomField>
    <fullName>Status_Attr__c</fullName>
    <label>Status Attr</label>
    <length>2</length>
    <type>Text</type>
</CustomField>