force-app/main/default/objects/Account/fields/Telefono_Cellulare__c.field-meta.xml
<CustomField>
    <fullName>Telefono_Cellulare__c</fullName>
    <label>Telefono Cellulare</label>
    <length>255</length>
    <type>Text</type>
</CustomField>