force-app/main/default/objects/Account/fields/Tipo_Intermediario_2__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Intermediario_2__c</fullName>
    <description>Secondo campo sul tipo intermediario creato per il dealer in quanto può essere censito con due tipi di accordo diversi</description>
    <label>Tipo Intermediario 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CV</fullName>
            </value>
            <value>
                <fullName>SA</fullName>
            </value>
            <value>
                <fullName>PV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>