force-app/main/default/objects/Account/fields/Tipo_Intermediario__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Intermediario__c</fullName>
    <label>Tipo Intermediario</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CV</fullName>
                <default>true</default>
                <label>CV</label>
            </value>
            <value>
                <fullName>SA</fullName>
            </value>
            <value>
                <fullName>PV</fullName>
            </value>
            <value>
                <fullName>AG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>