force-app/main/default/objects/Account/fields/Tipo_Rapporto__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Rapporto__c</fullName>
    <label>Tipo Rapporto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>