force-app/main/default/objects/Account/fields/TMKOutsourcerCode__c.field-meta.xml
<CustomField>
    <fullName>TMKOutsourcerCode__c</fullName>
    <description>Codice (sigla) degli Outsourcer gestiti dal processo Telemarketing</description>
    <inlineHelpText>Codice (sigla) degli Outsourcer gestiti dal processo Telemarketing</inlineHelpText>
    <label>TMKOutsourcerCode</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>