force-app/main/default/objects/Account/fields/Type_Anag__c.field-meta.xml
<CustomField>
    <fullName>Type_Anag__c</fullName>
    <label>Tipo Anagrafica</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>F</fullName>
                <label>Fisica</label>
            </value>
            <value>
                <fullName>G</fullName>
                <label>Giuridica</label>
            </value>
            <value>
                <fullName>A</fullName>
                <label>Altro</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>Privato</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>