force-app/main/default/objects/Account/fields/User_Approv__c.field-meta.xml
<CustomField>
    <fullName>User_Approv__c</fullName>
    <label>User Approv</label>
    <length>10</length>
    <type>Text</type>
</CustomField>