force-app/main/default/objects/Account/fields/Utilizzato_per_Reclami__c.field-meta.xml
<CustomField>
    <fullName>Utilizzato_per_Reclami__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Reclami</description>
    <label>Utilizzato per Reclami Eliminare</label>
    <type>Checkbox</type>
</CustomField>