force-app/main/default/objects/Account/fields/Vat_Code__c.field-meta.xml
<CustomField>
    <fullName>Vat_Code__c</fullName>
    <label>Vat Code</label>
    <length>11</length>
    <type>Text</type>
</CustomField>