force-app/main/default/objects/Account/fields/VolumeAffari__c.field-meta.xml
<CustomField>
    <fullName>VolumeAffari__c</fullName>
    <label>Volume affari</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>