force-app/main/default/objects/Account/fields/Zone__c.field-meta.xml
<CustomField>
    <fullName>Zone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Per account di tipo Dealer, Campo che indica a quale zona il Dealer è assegnato.</description>
    <label>Zone</label>
    <referenceTo>Zone__c</referenceTo>
    <relationshipLabel>Dealers</relationshipLabel>
    <relationshipName>Dealers</relationshipName>
    <type>Lookup</type>
</CustomField>