force-app/main/default/objects/Account/recordTypes/Branch.recordType-meta.xml
<RecordType>
    <fullName>Branch</fullName>
    <active>true</active>
    <description>identificativo filiale</description>
    <label>Branch</label>
</RecordType>