force-app/main/default/objects/Account/listViews/Branch.listView-meta.xml
<ListView>
    <fullName>Branch</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Branch</value>
    </filters>
    <label>Branch</label>
    <language>en_US</language>
    <sharedTo>
        <role>ADMIN</role>
    </sharedTo>
</ListView>